--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,8 @@
 
 /public/assets
 
+# Ignore coverage reporting
+/coverage
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
